--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-header></app-header>
 
-<main [ngClass]="{'pt-[80px]': !isHome(), 'md:pt-[90px]': !isHome()}">
+<main class="custom-padding" [ngClass]="{
+  'pt-[120px] sm:pt-[80px]': !isHome(),
+  'pt-0': isHome()
+}">
     <app-toast #toast></app-toast>
 
     <router-outlet></router-outlet>
