--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -1,7 +1,7 @@
 <div class=" min-h-screen text-white">
-    <div class="max-w-7xl py-6">
+    <div class="max-w-7xl mx-auto">
 
-        <h2 class="text-3xl font-bold mb-6">Tus Favoritos</h2>
+        <h2 class="text-4xl font-extrabold mb-8 border-b border-gray-700 pb-2">Tus Favoritos</h2>
 
         @if (loading()) {
         <div class="text-center text-gray-400">Cargando favoritos...</div>
