--- a/src/app/shared/components/add-to-playlist/add-to-playlist.component.html
+++ b/src/app/shared/components/add-to-playlist/add-to-playlist.component.html
@@ -1,4 +1,4 @@
-<div class="relative">
+<div class="relative z-1">
     <button (click)="toggleDropdown()"
         class="w-8 h-8 rounded-full bg-purple-600 text-white flex items-center justify-center hover:bg-purple-700 shadow-md z-30 relative">
         +
