--- a/src/app/shared/components/track-card/track-card.component.html
+++ b/src/app/shared/components/track-card/track-card.component.html
@@ -1,5 +1,4 @@
-<div
-    class="bg-white/10 rounded-xl p-4 flex gap-4 items-center hover:shadow-lg transition-transform duration-300 hover:scale-[1.02]">
+<div class="bg-white/10 rounded-xl p-4 flex gap-4 items-center hover:shadow-lg transition-transform duration-300">
     <img [src]="track.album.cover_small" [alt]="track.title" class="w-16 h-16 rounded" />
     <div class="flex-1 min-w-0">
         <p class="font-semibold truncate">{{ track.title }}</p>
